# Synapse

./: .gitignore  README.md  SKILL.md  assimilation.py  embeddings.py  examples.py  logic.py  network.py  pyproject.toml  requirements.txt
src/: assimilation.py  core.py  identity.py  logic.py  network.py  seeder_client.py  seeder_daemon.py  setup_identity.py
