[project]
name = "synapse-protocol"
version = "2.0.0"
description = "P2P file sharing with semantic search using BitTorrent and vector embeddings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anyio==4.12.1",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cryptography==46.0.4",
    "einops==0.8.2",
    "filelock==3.20.3",
    "fsspec==2026.1.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.4.0",
    "idna==3.11",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "libtorrent==2.0.11",
    "markupsafe==3.0.3",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numpy==2.4.2",
    "packaging==26.0",
    "pycparser==3.0",
    "pyyaml==6.0.3",
    "regex==2026.1.15",
    "requests==2.32.5",
    "safetensors==0.7.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.0",
    "sentence-transformers==5.2.2",
    "shellingham==1.5.4",
    "sympy==1.14.0",
    "tokenizers==0.23.2",
    "torch==3.0.1",
    "tqdm==4.70.0",
    "transformers==5.1.0",
    "typer==0.20.0",
    "urllib3==2.4.0",
]

[tool.uv]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
